--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
+/* Default CSS Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: Arial, sans-serif;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.font-display {
+  font-family: 'Roboto', sans-serif;
+  font-size: 5rem;
+  color: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.font-header {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3rem;
+  color: #000000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  display: flex;
+  justify-content: left;
+  flex-direction: column;
+  width: 20rem;
+  height: 100vh;
+  background-color: #dbdbdb;
+  color: #ffffff;
+  padding: 1rem 1.5rem;
+}
+
+.navbar-button {
+  text-align: left;
+  gap: 0.5rem;
+  background-color: #ffffff;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  border: none;
+  height: 4rem;
+  padding: 0.5em 0.5em;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 100%;
+}
+
+.navbar-button:hover {
+  background-color: #f0f0f0;
+}
+
+.navbar-icon {
+  max-height: 100%;
+}
+
+.navbar-container {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  margin-bottom: auto;
+  margin-top: 1rem;
+}
+
+.navbar-buttonDropdown {
+  text-align: left;
+  background-color: #ffffff;
+  color: #000000;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: none;
+  height: 4rem;
+  padding: 0.5em 0.5em;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-buttonDropdown:hover {
+  background-color: #f0f0f0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-buttonDropdown-container {
+  height: 100%;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  margin-right: auto;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.lineup-preview {
+  height: 95vh;
+  width: 30rem;
+  background-color: #f0f0f0;
+  padding: 1rem 1.5rem;
 }
