--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,19 @@ html, body {
   color: #000000;
 }
 
+.font-header3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+  color: #000000;
+}
+
 .icon {
   max-height: 100%;
+}
+
+.link {
+  text-decoration: none;
+  color: #000000;
 }
 
 /* App */
@@ -38,30 +49,85 @@ html, body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 100vh;
 }
 
 .app-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  
   flex: 1;
   gap: 3rem;
   max-width: 100%;
-  justify-content: center;
   margin-left: 2rem;
   margin-right: 2rem;
 }
 
+@media (max-width: 980px) {
+  .App {
+    align-items: start;
+    margin-top: 3rem;
+  }
+
+  .App .compact-navbar {
+    display: flex;
+  }
+
+  .App .navbar {
+    display: none;
+  }
+
+  .App .navbar-margin {
+    margin-left: 0;
+  }
+  
+  .app-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .App .app-container > * {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 750px) {
+  .app-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .App .compact-navbar-icon {
+    display: block;
+  }
+
+  .App .compact-navbar-container {
+    display: none;
+  }
+}
+
 /* Navbar */
+
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: left;
   flex-direction: column;
-  max-width: 20rem;
-  height: 100vh;
+  width: 20rem;
+  min-height: 100vh;
   background-color: #dbdbdb;
   color: #ffffff;
   padding: 1rem 1.5rem;
   flex: 1;
+}
+
+.navbar-margin {
+  margin-left: 20rem;
 }
 
 .navbar-button {
@@ -132,7 +198,48 @@ html, body {
   z-index: 1;
 }
 
+/* compact navbar */
+
+.compact-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3rem;
+  background-color: #dbdbdb;
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.compact-navbar-container {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-left: 1rem;
+}
+
+.compact-navbar-button {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 0.5em 0.5em;
+  border: none;
+  cursor: pointer;
+}
+
+.compact-navbar-button:hover {
+  background-color: #f0f0f0;
+}
+
+.compact-navbar-icon {
+  display: none;
+}
+
 /* Linup preview */
+
 .lineup-preview {
   height: 95vh;
   max-width: 30rem;
@@ -268,16 +375,47 @@ html, body {
 
 .lineup-stats {
   height: 95vh;
-  max-width: 30rem;
   background-color: #f0f0f0;
   padding: 1rem 1.5rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex: 1;
+  gap: 1.5rem;
+  overflow: hidden;
+  overflow-y: auto;
+  flex-wrap: wrap;
 
 }
 
+.lineup-stats-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex: 1;
+  gap: 1rem;
+}
+
 .lineup-stats-container {
-  display: grid;
-  
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background-color: #ffffff;
+  gap: 0.5rem;
+  max-width: 100%;
+  padding: 1rem 1.5rem;
+}
+
+.font-lineup {
+  min-width: 100%;
+}
+
+.lineup-picture {
+  max-width: 10rem;
+}
+
+.lineup-p-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #ececec;
 }
